--- a/sistema_04/css/style.css
+++ b/sistema_04/css/style.css
@@ -1,76 +1,79 @@
-  body {
-    padding: 20px;
-    margin: 0;
-    background: #ffffff;
-     height:100%;
-     overflow: hidden;
+body {
+  padding: 20px;
+  margin: 0;
+  background: #ffffff;
+  height: 100%;
+  overflow: hidden;
 
-     font-family: 'Roboto Mono', monospace;
-     font-size: 10pt;
-     color: #222;
-     font-weight: 200;
-     text-align: center;
+  font-family: "Roboto Mono", monospace;
+  font-size: 10pt;
+  color: #222;
+  font-weight: 200;
+  text-align: center;
 
-      -moz-user-select: none;
-      -webkit-user-select: none;
-      -ms-user-select:none;
-       user-select:none;
-       -o-user-select:none;"
-        unselectable="on"
-        onselectstart="return false;"
-        onmousedown="return false;"
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -o-user-select: none;
 
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
-   -khtml-user-select: none; /* Konqueror HTML */
-     -moz-user-select: none; /* Firefox */
-      -ms-user-select: none; /* Internet Explorer/Edge */
-          user-select: none; /* Non-prefixed version, currently
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
                                 supported by Chrome and Opera */
+}
 
-  }
-  html{
-    height:100%;
-  }
+html {
+  height: 100%;
+}
 
 #sketchDiv {
-  height:80%;
-//  overflow:hidden;
+  height: 80%;
+  //  overflow:hidden;
   //background-color: #F00;
   margin: 50px;
-
-
 }
 
-body a{
+body a {
   text-decoration: none;
   color: #222;
   font-weight: 200;
 }
 
-body a:active{
+body a:active {
   text-decoration: none;
   color: #222;
   font-weight: 400;
 }
 
-body a:hover{
+body a:hover {
   text-decoration: none;
   color: #222;
   font-weight: 400;
 }
 
-body a:visited{
+body a:visited {
   text-decoration: none;
   color: #222;
   font-weight: 200;
 }
 
-
-
-.p5Canvas{
+.p5Canvas {
   padding: 0;
   margin: auto;
   display: block;
+}
 
+canvas,
+#sketchDiv,
+#sketchDiv img,
+* {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
